--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <section class="conteudo-principal">
-        <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
+        <h2 class="titulo-principal">Meus objetivos do ano - 2024 <span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
                 <button class="botao ativo">Cursos no alura</button>
@@ -21,7 +21,7 @@
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
                     <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos no alura</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar meu objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias0"></p>
